--- a/src/html/story.html
+++ b/src/html/story.html
@@ -57,19 +57,19 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="img/kraken01.jpg" class="d-block w-100" alt="kraken01">
+                    <img src="./img/kraken01.jpg" class="d-block w-100" alt="kraken01">
                     <div class="carousel-caption d-none d-md-block">
                       <p>Kraken taking down a ship in the Atlantic.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="img/kraken02.jpg" class="d-block w-100" alt="kraken02">
+                    <img src="./img/kraken02.jpg" class="d-block w-100" alt="kraken02">
                     <div class="carousel-caption d-none d-md-block">
                       <p>Kraken taking down a ship in the Caribbean.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="img/kraken03.jpg" class="d-block w-100" alt="kraken03">
+                    <img src="./img/kraken03.jpg" class="d-block w-100" alt="kraken03">
                     <div class="carousel-caption d-none d-md-block">
                       <p>Kraken taking down a ship in the Mediterranean.</p>
                     </div>
